--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "react-parallax-tilt": "^1.7.319",
     "react-router-dom": "^7.13.0",
     "react-scripts": "5.0.1",
-    "react-slick": "^0.31.0",
-    "slick-carousel": "^1.8.1",
+    "swiper": "^12.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
