--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "react-parallax-tilt": "^1.7.319",
     "react-router-dom": "^7.13.0",
     "react-scripts": "5.0.1",
+    "react-snap": "^1.23.0",
     "swiper": "^12.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "react-snap",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -43,5 +45,8 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.4.19"
+  },
+  "reactSnap": {
+    "inlineCss": true
   }
 }
