--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^10.0.2",
     "react-parallax-tilt": "^1.7.319",
     "react-router-dom": "^7.13.0",
     "react-scripts": "5.0.1",
