--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "framer-motion": "^12.34.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^10.0.2",
     "react-parallax-tilt": "^1.7.319",
     "react-router-dom": "^7.13.0",
     "react-scripts": "5.0.1",
     "react-snap": "^1.23.0",
+    "sitemap": "^9.0.0",
     "swiper": "^12.1.1",
     "web-vitals": "^2.1.4"
   },
@@ -24,7 +26,17 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "postbuild": "react-snap",
     "eject": "react-scripts eject"
+  },
+  "reactSnap": {
+    "include": [
+      "/",
+      "/about",
+      "/contact",
+      "/team",
+      "/servicepage"
+    ]
   },
   "eslintConfig": {
     "extends": [
